@@ -1,10 +1,0 @@
-{% extends "base.html" %}
-
-{% block columnwrap %}
-	<div id="content-main" class="span-13 prepend-1 colborder">
-		{% block content %}{% endblock %}
-	</div><!-- END content-main -->
-	<div id="content-related" class="span-8 last">
-		{% block content-related %}{% endblock %}
-	</div><!-- END content-related -->
-{% endblock %}
