@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Password reset" %}{% endblock %}
@@ -14,7 +14,7 @@
 </script>
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<form action="" method="post" accept-charset="utf-8">
 	<fieldset>
 		<legend>{% trans "Password reset" %}</legend>
@@ -32,7 +32,7 @@
 	</form>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
 	<div class="box">
 		<h3>{% trans "Password reset form" %}</h3>
 		<p>{% trans "Forgotten your password? Enter your e-mail address, and we'll reset your password and e-mail the new one to you" %}.</p>
