@@ -1,17 +1,17 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password reset successful' %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<div class="success">
 		<h3>{% trans "Password reset successful" %}</h3>
 		<p>{% trans "We've e-mailed you the instructions to obtain a new password. You should be receiving it shortly" %}.</p>
 	</div>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
   <div class="box">
     <h3>{% trans "Password reset form" %}</h3>
     <p>{% trans "Forgotten your password? Enter your e-mail address, and we'll reset your password and e-mail the new one to you" %}.</p>
