@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% blocktrans %}{{ user }}'s Dashboard{% endblocktrans %}{% endblock %}
@@ -10,16 +10,16 @@
 	{% endif %}
 {% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<form action="{{ request.path_info }}" method="post" enctype="multipart/form-data">
 	{{ form.errors }}
 	<fieldset>
 		<legend>{% trans "Define your location" %}</legend>
-		<label for="id_country">{% trans "Country" %}<img class="hide" src="{{ MEDIA_URL }}userprofile/images/loading.gif" /></label>
+		<label for="id_country">{% trans "Country" %}<img class="hide" alt="{% trans "Loading..." %}" src="{{ MEDIA_URL }}userprofile/images/loading.gif" /></label>
 		<p>{{ form.country }}</p>
 		{% if GOOGLE_MAPS_API_KEY %}
 			<div class="mapinfo">
@@ -32,10 +32,10 @@
 			<div style="display: none;" id="apikey">{{ GOOGLE_MAPS_API_KEY }}</div>
 		{% endif %}
 	</fieldset>
-	<input type="submit" value="{% trans 'Save' %}" />
+	<p><input type="submit" value="{% trans 'Save' %}" /></p>
 	</form>
 {% endblock %}
-{% block content-related %}
+{% block userprofile_content_related %}
 <div class="box">
   <h3>{% trans "Location information" %}</h3>
     <p>{% trans "Define your location information" %}.</p>
